Prevent icon layout shift

--- a/client/src/app/shared/shared-icons/global-icon.component.scss
+++ b/client/src/app/shared/shared-icons/global-icon.component.scss
@@ -1,12 +1,17 @@
-:host ::ng-deep {
-  svg {
-    vertical-align: bottom;
-    width: inherit;
-    height: inherit;
-  }
+:host {
+  display: inline-block;
+  height: 24px;
+  width: 24px;
 
-  .feather-flag {
-    margin-left: -1px;
+  ::ng-deep {
+    svg {
+      vertical-align: bottom;
+      width: inherit;
+      height: inherit;
+    }
+
+    .feather-flag {
+      margin-left: -1px;
+    }
   }
 }
-
